# DeWordle

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODO.md  package.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
backend/: .env.example  README.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json
docs/: ARCHITECTURE.md  BACKEND_INDEXER_FOUNDATION.md  CACHE_KEY_POLICY.md  DEPLOY_TOPOLOGY.md  DEVELOPMENT.md  DRIPS_WAVE_PREP.md  FRONTEND_WALLET_FOUNDATION.md  GITHUB_PROJECT_PLAN.md  QA_KNOWN_LIMITATIONS.md  README.md  REPLAY_SAFETY_MODEL.md  SECURITY_ADVISORIES.md  SECURITY_FOUNDATION.md  SOROBAN_DEPLOYMENT_FLOW.md  SOROBAN_FOUNDATION_ARCHITECTURE.md  SOROBAN_GITHUB_STRATEGY.md  SOROBAN_LOCAL_DEV.md  SOROBAN_SDK_GUIDE.md  STELLAR_MIGRATION.md  WAVE_CONTRIBUTOR_QUICKSTART.md  WAVE_MIGRATION_ISSUE_CANDIDATES.md
frontend/: .env.example  package-lock.json  package.json  pnpm-lock.yaml
scripts/: backup-projection-data.sh  backup-projection-data.test.js  categorize-failure.sh  check-node-action.test.js  ci-local.sh  (+37 more)
soroban/contracts/core_game/: Cargo.toml
soroban/contracts/core_game/src/: fixtures.rs  lib.rs
soroban/contracts/core_game/test_snapshots/tests/: attempt_limit_reached_sets_lost.1.json  create_session_when_paused_panics.1.json  finalize_session_after_win.1.json  finalize_twice_panics.1.json  init_twice_panics.1.json  is_nonce_used_returns_true_after_session.1.json  nonce_reuse_panics.1.json  pause_and_unpause.1.json  submit_guess_increments_attempts.1.json  submit_guess_wrong_player_panics.1.json
(+222 files in other folders)
