[package]
name = "core-game"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
dewordle-types = { path = "../../crates/dewordle-types" }
dewordle-auth = { path = "../../crates/dewordle-auth" }
dewordle-utils = { path = "../../crates/dewordle-utils" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
